styles/components/title.scss
.h1,
.h2,
.h3 {
  font-family: 'EB Garamond';
  font-weight: 400;
  font-style: normal;
  letter-spacing: -0.02em;
  text-transform: uppercase;
}

.h1 {
  font-size: 4.2rem;
  line-height: 0.87;
  letter-spacing: -0.02em;

  @include media('>tablet') {
    font-size: 6rem;
  }

  @include media('>desktop') {
    font-size: 6rem;
  }
}

.h2 {
  font-size: 3.5rem;
  line-height: 0.87;
  letter-spacing: -0.02em;
}

.h3 {
  font-size: 2.9rem;
  line-height: 0.87;
  letter-spacing: -0.02em;

  @include media('>desktop') {
    font-size: 4.5rem;
  }
}

.h4 {
  font-size: 1.1rem;
  line-height: 1;
  font-weight: 500;
  font-style: normal;
  letter-spacing: -0.012em;
  text-transform: uppercase;
}

.italic {
  margin-left: 1rem;
  font-style: italic;
  text-transform: lowercase;
}

